objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Customer_NPS__c</fullName>
        <label>Customer NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSLDemoTools_AR_Actual_Travel_Time__c</fullName>
        <label>FSLDemoTools AR Actual Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Wave_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used to protect the wave data set from the FSL Demo Tools Restore Utility</description>
        <label>FSLDemoTools Wave Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Wave_Week__c</fullName>
        <label>FSLDemoTools Wave Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Compliance__c</fullName>
        <formula>If( ActualEndTime &lt; DueDate , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_FTFR_Count__c</fullName>
        <description>Sets the value of the field to 0 if status is &apos;Cannot Complete&apos;. This field is used in Service Manager report to calculate First Time Fix Rate value</description>
        <formula>IF(ISPICKVAL(Status,&apos;Cannot Complete&apos;),0,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTFR Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttIcon__c</fullName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Display_Date__c</fullName>
        <label>Gantt Display Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
                <value>
                    <fullName>Rejected by Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Today__c</fullName>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Use_Async_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Async Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Partner_Central_CommunityURL__c</fullName>
        <description>Used by Demo Configurator to set Community URL for Message Templates</description>
        <label>Partner Central Community URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Value__c</fullName>
        <formula>Contact.Account.Open_Oppty_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contractor_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contractor Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments (Related Contractor Appointment)</relationshipLabel>
        <relationshipName>Related_Contractor_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_Late_in_mins__c</fullName>
        <label>Running Late (in mins)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SchEndDateFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>CASE(MONTH(DATEVALUE( SchedEndTime )), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedEndTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedEndTime)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchEndDateFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchEndTimeFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedEndTime - (7/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchEndTimeFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchStartDateFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>CASE(MONTH(DATEVALUE(SchedStartTime)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedStartTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedStartTime)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchStartDateFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchStartTimeFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedStartTime - (8/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchStartTimeFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Color__c</fullName>
        <description>This field is used within a custom gantt pallet to identify the service resource the appointment was originally scheduled to before optimization was run. Post optimization it creates a nice visualization of the optimizer at work.</description>
        <label>Tech Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Not_Alt1_Candidates__c</fullName>
        <label>Why Not Alt1 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt1_Count__c</fullName>
        <label>Why Not Alt1 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt2_Candidates__c</fullName>
        <label>Why Not Alt2 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt2_Count__c</fullName>
        <label>Why Not Alt2 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt3_Candidates__c</fullName>
        <label>Why Not Alt3 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt3_Count__c</fullName>
        <label>Why Not Alt3 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Last_Run__c</fullName>
        <label>Why Not Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Why_Not_Main_Candidates__c</fullName>
        <label>Why Not Main Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Main_Count__c</fullName>
        <label>Why Not Main Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_NoAvail_Candidates__c</fullName>
        <label>Why Not NoAvail Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_NoAvail_Count__c</fullName>
        <label>Why Not NoAvail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Acceptance_Status__c</fullName>
        <label>Work Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order_URL__c</fullName>
        <formula>Parent_Work_Order__r.Id</formula>
        <label>Work Order URL</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>EstDuration</columns>
        <columns>Status</columns>
        <columns>Subject</columns>
        <columns>ServiceTerritory</columns>
        <columns>Open_Opportunity_Value__c</columns>
        <columns>Account</columns>
        <columns>EarliestStartTime</columns>
        <columns>LatestEndTime</columns>
        <columns>SchedStartTime</columns>
        <columns>FSL__IsMultiDay__c</columns>
        <columns>FSLDemoTools_Master_Data__c</columns>
        <columns>Site_Inspection__c</columns>
        <columns>FSL__GanttLabel__c</columns>
        <columns>FSLDemoTools_Service_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>FieldServiceMobile</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Contact</columns>
        <columns>Name</columns>
        <filterScope>AssignedToMe</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>FieldServiceMobile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Master_Data</fullName>
        <active>true</active>
        <errorConditionFormula>FSLDemoTools_Master_Data__c</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Can&apos;t Edit FSLDemoTools Master Data</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Dont_allow_scheduled_or_dispatched</fullName>
        <active>true</active>
        <description>Don&apos;t allow creation of service with status scheduled or  dispatched</description>
        <errorConditionFormula>AND($Setup.FSL__Service_Creation_Validation_Rules__c.FSL__Service_Creation_Status_Validation__c,AND(ISNEW(),(OR(ISPICKVAL(StatusCategory, &quot;Scheduled&quot;),ISPICKVAL(StatusCategory, &quot;Dispatched&quot;)))))</errorConditionFormula>
        <errorMessage>New service appointment cannot be created in scheduled or  dispatched statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Select a valid dependency type. If the appointments must be assigned to the same resource, the dependency type can’t be Same Start.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_End_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
        <errorDisplayField>SchedEndTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDueDateExist</fullName>
        <active>false</active>
        <description>Check if DueDate field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>DueDate field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isEarliestStartTimeExist</fullName>
        <active>false</active>
        <description>Check if EarliestStartTime field exist on service appointment.</description>
        <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>EarliestStartTime field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
        <active>false</active>
        <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
    </validationRules>
</CustomObject>